- Created controllers for each endpoint - Also added validators
